# pkg-config-vscode

./: .gitmodules  README.md  ROADMAP.md  configurations.c  main.c  meson.build
app/: app_err.c  app_err.h  compiler_flags.c  compiler_flags.h  configurations.c  configurations.h  jsn_configs.c  jsn_configs.h  jsn_root.c  jsn_root.h  main.c
app/include/: app_err.h  compiler_flags.h  jsn_configs.h  jsn_root.h
libs/: meson.build
libs/include/: log.h  std_string.h  string_utils.h  string_vec.h  string_vector.h
libs/std_string/: std_string_free.c  std_string_init.c  std_string_new.c
libs/string/: string_rtrim.c  string_split.c  string_strip_prefix.c  string_vector.c
libs/string_utils/: string_split.c  string_starts_with.c
libs/string_vec/: string_vec_concat.c  string_vec_free.c  string_vec_includes.c  string_vec_map.c  string_vec_new.c  string_vec_print.c  string_vec_push.c  string_vec_uniq.c
libs/string_vector/: string_vector_concat.c  string_vector_free.c  string_vector_includes.c  string_vector_map.c  string_vector_new.c  string_vector_print.c  string_vector_push.c
tests/: meson.build  string_rtrim_tests.c  string_split_tests.c  string_starts_with_tests.c  string_strip_prefix_tests.c  string_tests.c  string_utils_tests.c  string_vec_concat_tests.c  string_vec_includes_tests.c  string_vec_push_tests.c  string_vec_tests.c  string_vec_uniq_tests.c  string_vector_tests.c
